# apples-ferret-demo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: space.yaml
docker/: Dockerfile  ferret.Dockerfile
ferret/: Dockerfile  app.py
ferret/src/ferret/serve/: gradio_web_server.py
models/ferret-7b-v1-3/: Dockerfile  README.md  reproduce.sh
src/ferret/: app.py  conversation.py  mm_utils.py  utils.py
src/ferret/model/: apply_delta.py  builder.py  consolidate.py  ferret_arch.py  make_delta.py  utils.py
src/ferret/model/language_model/: ferret_llama.py
src/ferret/model/multimodal_encoder/: clip_encoder.py
src/ferret/serve/: controller.py  gradio_web_server.py  model_worker.py
src/ferret/train/: ferret_trainer.py  llama_flash_attn_monkey_patch.py  train.py  train_mem.py
